Init Commit Make CSVReaderWriter Generic